--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
   <title>Rock, Paper, Scissors</title>
 </head>
 
 <body>
+  <div class="btns">
+    <p>PLAYER: </p>
+    <button type="button" id='rock'>Rock</button>
+    <button type="button" id='paper'>Paper</button>
+    <button type="button" id='scissors'>Scissors</button>
+  </div>
+  <div id="result-box" class="result">
+    <p>Result of this mighty duel:</p>
+  </div>
+  <div id="computer-box" class="computer"> 
+    <p>COMPUTER: </p>
+    <p>I chose:</p>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
