added score, cleaned UI

--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
 </head>
 
 <body>
-  <div class="btns">
+  <div id="btns">
     <p>PLAYER: </p>
-    <button type="button" id='rock'>Rock</button>
-    <button type="button" id='paper'>Paper</button>
-    <button type="button" id='scissors'>Scissors</button>
+    <div>
+    <button type="button" id='Rock'>Rock</button>
+    <button type="button" id='Paper'>Paper</button>
+    <button type="button" id='Scissors'>Scissors</button>
+    </div>
   </div>
-  <div id="result-box" class="result">
-    <p>Result of this mighty duel:</p>
+  <div id="result">
+    <p>First to five wins!</p>
+    <p>SCORE:</p>
   </div>
-  <div id="computer-box" class="computer"> 
+  <div id="computer"> 
     <p>COMPUTER: </p>
-    <p>I chose:</p>
   </div>
   <script src="script.js"></script>
 </body>
