restructured logic, added score reset

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
   </div>
   <div id="result">
-    <p>First to five wins!</p>
+    <p>FIRST TO FIVE WINS!</p>
     <p>SCORE:</p>
   </div>
   <div id="computer"> 
